# brado

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: deploy.yaml  ruts.yml  tests.yaml
brado/: .rustfmt.toml  Cargo.toml  Makefile
brado-c/: Cargo.toml  test.sh
brado-c/examples/: test.cpp
brado-c/include/: brado.h
brado-c/src/: cnpj.rs  cpf.rs  lib.rs
brado/src/: certidao.rs  cnh.rs  cnpj.rs  cns.rs  common.rs  cpf.rs  docs.rs  eleitoral.rs  lib.rs  nis.rs  renavam.rs
brado/src/cnh/: cnh.rs  mod.rs  utils.rs
brado/src/cnpj/: cnpj.rs  mod.rs  utils.rs
brado/src/common/: utils.rs
brado/src/cpf/: cpf.rs  mod.rs  utils.rs
brado/src/docs/: cnh.rs  cnpj.rs  common.rs  cpf.rs  doc.rs  mod.rs
brado/tests/: certidao.rs  cnh.rs  cnpj.rs  cns.rs  cpf.rs  docs.rs  eleitoral.rs  nis.rs  renavam.rs
src/: lib.rs
src/docs/: cnpj.rs  cpf.rs  doc.rs  mod.rs
